# Renux

./: CLAUDE.md  CMakeLists.txt  Dockerfile  EBPF_IMPL.md  EBPF_REPORT.md  Makefile  README.md  TEST_REPORT.md  docker-compose.yml  install.sh  main.c  mock_agents.py  setup.sh
client/: client.c  client.h  tui.c  tui.h
docs/: PLAN.md  REPORT.md  REVIEW_ANALYSIS.md
monitoring/: master.cpp  monitor.cpp  renux.bpf.c  renux_event.h
server/: server.c  server.h  service.c  service.h  tui.c  tui.h
test/: run_tests.sh  test_monitoring.sh
utils/: exec_utils.c  exec_utils.h  log.c  log.h  ssl_utils.c  ssl_utils.h
